tests/ui/method_too_many_args.stderr
error: Too many arguments
 --> $DIR/method_too_many_args.rs:8:13
  |
8 | fn read_all(_id : u64)
  |             ^^^
